--- a/index.html
+++ b/index.html
@@ -31,13 +31,16 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-        <a class="logo" href="index.html"><img src="../img/marvel-logo.svg" height="100"></a>
+        <a class="logo" href="index.html">
+          <img src="../img/marvel-logo.svg">
+          <p>ous!</p>
+        </a>
       </div>
       <div id="navbar" class="navbar-collapse collapse nav-holder">
         <ul class="nav navbar-nav navbar-center">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="/index.html">Home</a></li>
           <li id="search"><a href="#">Search</a></li>
-          <li id="about"><a href="">About</a></li>
+          <li id="about"><a href="#">About</a></li>
         </ul>
       </div>
     </nav>
