--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
   </div>
   <div class="content-holder">
   </div>
+  <div class="footer">
+    <p>Data provided by Marvel. © 2014 Marvel</p>
+    <div class="footer-info"><a href="mailto:andreas.ostlund@spelpunkten.com"><p>&copy Andreas Ostlund</p></a></div>
+    <div class="footer-info"><a href="https://www.linkedin.com/in/andreas-östlund-42945467"><p>LinkedIn</p></a></div>
+    <div class="footer-info"><a href="https://github.com/aostlund"><p>Github</p></a></div>
+  </div>
 </body>
 
 </html>
